# django-azure

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: azure.yml
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options.py
apps/accounts/tests/: conftest.py  customuser_tests.py
apps/accounts/tests/fixtures/: customuser_fixture.py
apps/cart/: cart.py  views.py
apps/cart/templates/cart/: detail.html
apps/shop/: models.py  views.py
apps/shop/migrations/: 0001_initial.py
apps/shop/templates/shop/: base.html
apps/shop/templates/shop/product/: detail.html
config/: settings.py  urls.py
