[tool.poetry]
name = "company-manager"
version = "0.1.0"
description = ""
authors = ["Ateliware - Lojacorr"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
python-decouple = "^3.4"
django-extensions = "^3.1.3"
Pillow = "^8.3.1"
djhtml = "^1.4.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
pylint = "^2.9.3"
pylint-django = "^2.4.4"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
ipython = "^7.25.0"
pytest-cov = "^2.12.1"
pylint-pytest = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "django"
multi_line_output = 3
skip = "migrations"